tests/expected_invalid_failing_match_duplicate_failure.diag.out
<input>:14:9: error: duplicate failed arm for variant 'Bad'
            failed(Bad) => 2,
            ^^^^^^^^^^^
